cargo-features = ["edition"]

[package]
name = "faster"
description = "Explicit SIMD for humans"
authors = ["Adam Niederer <adam.niederer@gmail.com>"]
license = "MPL-2.0"
version = "0.4.3"
edition = "2018"

keywords = ["simd"]
categories = ["no-std", "hardware-support", "api-bindings"]
documentation = "https://docs.adamniederer.com/faster/index.html"
repository = "https://github.com/AdamNiederer/faster"
readme = "README.org"

[dependencies]
stdsimd = {git = "https://github.com/AdamNiederer/stdsimd", branch="fix-bft-build"}

[features]
no-std = []

[dev-dependencies]

[profile.release]
opt-level = 3
