cargo-features = ["edition"]

[package]
name = "faster"
description = "Explicit SIMD for humans"
authors = ["Adam Niederer <adam.niederer@gmail.com>"]
license = "MPL-2.0"
version = "0.4.3"
edition = "2018"

keywords = ["simd"]
categories = ["no-std", "hardware-support", "api-bindings"]
documentation = "https://docs.adamniederer.com/faster/index.html"
repository = "https://github.com/AdamNiederer/faster"
readme = "README.org"

[dependencies]
vektor = {git = "https://github.com/AdamNiederer/vektor", branch = "master"}

[features]
default = ["std"]
std = []
trace = []  # When enabled, `FASTER_DEBUG_FILE` environment can configure log file.

[dev-dependencies]

[profile.release]
opt-level = 3
